--- a/Views/index.handlebars
+++ b/Views/index.handlebars
@@ -12,7 +12,7 @@
     </form>
 </div>
 
-<div class="panel panel-default col-md-5">
+<div class="panel panel-default col-md-5" style="padding: 0px">
     <div class="panel-heading">
         <h3>List of Burger to Eat</h3>
     </div>
