fix update  devour button

--- a/Public/assets/css/burger_style.css
+++ b/Public/assets/css/burger_style.css
@@ -17,6 +17,10 @@ h1 {
     padding-top: 40px;
 }
 
+h3{ 
+    text-align: center;
+}
+
 .add {
     background-color: lightgray;
     color: black;
