--- a/Views/index.handlebars
+++ b/Views/index.handlebars
@@ -24,6 +24,7 @@
             <li>
                 <form action="/{{this.id}}?_method=PUT" method="POST" class="update-button">
                     {{this.burger_name}}
+                <input type="hidden" name="devoured" value=1>
                 <button type="submit" class="btn btn-secondary btn-sm">DEVOUR!</button>
                 </form>
             </li>
